<resources>
    <string name="app_name">RestaurantLogApp</string>
    <string name="title_home">Home</string>
    <string name="title_find">Find</string>
    <string name="title_share">Share</string>

    <string name="maps_api_key">AIzaSyCwVEwlLnQXMoPrXUcmAw7ByHWwTZNilhM</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="cuisine">Cuisine</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="priceLevel">Price Level</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string-array name="cuisines">
        <item>Japanese</item>
        <item>Italian</item>
        <item>French</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Malaysian</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Zoom">zoom</string>
</resources>
