<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:labelFor="@id/nameTxt"
        android:text="@string/name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:labelFor="@id/cuisineTxt"
        android:text="@string/cuisine"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cuisineTxt"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:labelFor="@id/ratingRb"
        android:text="@string/rating"
        android:textSize="14sp" />

    <RatingBar
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:id="@+id/ratingRb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_margin="5dp"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:labelFor="@id/priceLevelTxt"
        android:text="@string/price"
        android:textSize="14sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priceLevelTxt"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/editFab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="end"
        app:srcCompat="@android:drawable/ic_menu_edit" />
</LinearLayout>