<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.development.georgemcl.restaurantlogapp.Activities.AddRestaurantActivity">

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cuisineTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuisine"
        android:layout_margin="5dp"/>

    <Spinner
        android:id="@+id/cuisineSpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_margin="5dp"/>

    <SeekBar
        android:id="@+id/priceSb"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="1"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/ratingTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_margin="5dp"/>

    <RatingBar
        android:id="@+id/ratingRb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:numStars="5"
        android:rating="0" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add" />

</LinearLayout>
